# unlearning-audit

./: .gitignore  NEXT_SESSION.md  README.md  pyproject.toml  unlearning-audit-research-briefing.md
configs/: default.yaml
scripts/: aggregate_seed_results.py  export_manifest.py  run_analysis.py  run_evaluation.py  run_experiment.py  run_seed_sweep.py  run_unlearning.py  smoke_test.py  train_poisoned.py
src/unlearning_audit/: config.py  train.py
src/unlearning_audit/analysis/: plotting.py
src/unlearning_audit/data/: cifar10.py  poisoning.py
src/unlearning_audit/eval/: __init__.py  metrics.py  probes.py
src/unlearning_audit/models/: resnet.py
src/unlearning_audit/unlearn/: __init__.py  neggrad.py  retrain.py  ssd.py
