[project]
name = "unlearning-audit"
version = "0.1.0"
description = "Evaluating machine unlearning as a defense against backdoor poisoning attacks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.22.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "tqdm>=4.66",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu130"
extra-index-url = ["https://pypi.org/simple"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unlearning_audit"]
